Fixed media query for contact boxes to reduce on mobile phones.  You should now not be prompted to scroll left and right on mobile phones.

--- a/css/style.css
+++ b/css/style.css
@@ -1588,7 +1588,7 @@ footer p{
 	}
 
 	.contact .contact-item{
-		max-width:300px;
+		max-width:255px;
 		margin:0 auto;
 		margin-bottom:30px;
 	}
